# vector_store_in_memory

./: README.md  pyproject.toml
faiss_index_react/: index.faiss  index.pkl
vector_store_in_memory/: main.py
vector_store_in_memory/chroma_db_local/: chroma.sqlite3
